Updated based off of google analytics data

--- a/about-me.html
+++ b/about-me.html
@@ -24,6 +24,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
 <!-- End Google Tag Manager -->
+<style>
+  .section-shaped .shape-style-1.shape-primary {
+    background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%);
+  }
+
+  .headroom--not-top {
+    background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%) !important;
+  }
+</style>
 </head>
 
 <body>
@@ -34,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
       <div class="container">
         <a class="navbar-brand mr-lg-5" href="/">
-          <img src="./assets/img/brand/white.png">
+          <img src="../assets/img/brand/white.png">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,7 +53,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row">
               <div class="col-6 collapse-brand">
                 <a href="/">
-                  <img src="./assets/img/brand/blue.png">
+                  <img src="../assets/img/brand/blue.png">
                 </a>
               </div>
               <div class="col-6 collapse-close">
@@ -57,7 +66,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
             <li class="nav-item">
-              <a href="./" class="nav-link active" role="button">
+              <a href="./" class="nav-link" role="button">
                 <i class="fa fa-home d-lg-none"></i>
                 <span class="nav-link-inner--text">Home</span>
               </a>
@@ -78,6 +87,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="./redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-me.html" class="nav-link active" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
               </a>
             </li>
           </ul>
@@ -171,6 +186,138 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="section section-lg pt-lg-0">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row row-grid">
+              <div class="col-lg-4">
+                <a href="../case/church-state.html" class="card card-lift--hover shadow border-0">
+                  <div class="">
+                    <img style="width:100%" src="../case/img/churchandstate-cover.png" alt="Church and State logo with building interior as background">
+                    <div class="card-body">
+                      <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
+                        <i class="ni ni-istanbul"></i>
+                      </div> -->
+                      <h6 class="text-primary text-uppercase">Church & State</h6>
+                      <p class="text-muted mt-3">Church & State is a no-strings-attached business incubator for the community to use and build.</p>
+                      <div>
+                        <span class="badge badge-pill badge-primary">UI</span>
+                        <span class="badge badge-pill badge-primary">UX</span>
+                        <span class="badge badge-pill badge-primary">IA</span>
+                      </div>
+                      <button class="btn btn-primary mt-4 d-lg-none">Learn more</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-lg-4">
+                <a href="../case/pandaone.html" class="card card-lift--hover shadow border-0">
+                  <div class="">
+                    <img style="width:100%" src="../case/img/pandaone-cover.png" alt="Church and State logo with building interior as background">
+                    <div class="card-body">
+                      <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
+                        <i class="ni ni-istanbul"></i>
+                      </div> -->
+                      <h6 class="text-success text-uppercase">PandaOne</h6>
+                      <p class="mt-3 text-muted">PandaOne helps support agents pull up Institutions information faster on Phone calls and Chats.</p>
+                      <div>
+                        <span class="badge badge-pill badge-success">UI</span>
+                        <span class="badge badge-pill badge-success">UX</span>
+                        <span class="badge badge-pill badge-success">Interaction Design</span>
+                      </div>
+                      <button class="btn btn-success mt-4 d-lg-none">Learn more</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-lg-4">
+                <a href="../case/kick-app-2.html" class="card card-lift--hover shadow border-0">
+                  <div class="">
+                    <img style="width:100%" src="../case/img/kick-app-cover.png" alt="Church and State logo with building interior as background">
+                    <div class="card-body">
+                      <!-- <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
+                        <i class="ni ni-istanbul"></i>
+                      </div> -->
+                      <h6 class="text-info text-uppercase">Kick App</h6>
+                      <p class="mt-3 text-muted">Kick App tracks in-game player stats without taking the coach away from the action on the field.</p>
+                      <div>
+                        <span class="badge badge-pill badge-info">UI</span>
+                        <span class="badge badge-pill badge-info">UX</span>
+                        <span class="badge badge-pill badge-info">Interaction Design</span>
+                      </div>
+                      <button class="btn btn-info mt-4 d-lg-none">Learn more</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row row-grid my-3">
+          <div class="col-lg-4">
+            <a href="../case/support-dashboard.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/support-dashboard-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Support Dashboard</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="../case/indoor-soccer-subbing-app.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/indoor-soccer-subbing-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Indoor Soccer Subbing App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="../case/calendar-app.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/calendar-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Calendar App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- <div class="col-lg-4">
+            <a href="./chlg_onoff-switch.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="./img/onoff-switch-thumb.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">On / Off Switch</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div> -->
         </div>
       </div>
     </section>
