--- a/case/church-state.html
+++ b/case/church-state.html
@@ -24,6 +24,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
 <!-- End Google Tag Manager -->
+<style>
+  .section-shaped .shape-style-1.shape-primary {
+    background: linear-gradient(150deg, #042038 15%, #123351 70%, #21486C 94%);
+  }
+
+  .headroom--not-top {
+    background: linear-gradient(150deg, #042038 15%, #123351 70%, #21486C 94%) !important;
+  }
+</style>
 </head>
 
 <body>
@@ -78,6 +87,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-me.html/" class="nav-link" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
               </a>
             </li>
           </ul>
