--- a/case/pandaone.html
+++ b/case/pandaone.html
@@ -18,12 +18,32 @@
   <!-- Docs CSS -->
   <link type="text/css" href="../assets/css/docs.min.css" rel="stylesheet">
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
+  <script>
+    (function(w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-N2ZHDPF');
+  </script>
   <!-- End Google Tag Manager -->
+  <style>
+    .section-shaped .shape-style-1.shape-primary {
+      background: linear-gradient(150deg, #00DA4C 15%, #00E36D 70%, #00ED8E 94%);
+    }
+
+    .headroom--not-top {
+      background: linear-gradient(150deg, #00DA4C 15%, #00E36D 70%, #00ED8E 94%) !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -31,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N2ZHDPF" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <header class="header-global">
-    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
+    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light2 headroom">
       <div class="container">
         <a class="navbar-brand mr-lg-5" href="../index.html">
           <img src="../assets/img/brand/white.png">
@@ -78,6 +98,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-me.html/" class="nav-link" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
               </a>
             </li>
           </ul>
@@ -143,7 +169,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
                       <span class="btn-inner--text display-3">Understand</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
@@ -167,7 +194,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
                       <span class="btn-inner--text display-3">Define</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
@@ -182,7 +210,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
                       <span class="btn-inner--text display-3">Explore</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
@@ -228,7 +257,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
                       <span class="btn-inner--text display-3">Create</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
