--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,11 @@
   <link type="text/css" href="../assets/css/argon.css?v=1.0.1" rel="stylesheet">
   <!-- Docs CSS -->
   <link type="text/css" href="../assets/css/docs.min.css" rel="stylesheet">
+  <style>
+    .section-shaped .shape-style-1.shape-default {
+      background: url(./img/dot-background.svg), linear-gradient(150deg, #3949AB 15%, #283593 70%, #1A237E 94%);
+    }
+  </style>
 </head>
 
 <body>
@@ -65,7 +70,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="../redesign/" class="nav-link active" role="button">
+              <a href="../redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
               </a>
@@ -101,11 +106,22 @@
       <section class="section section-lg section-shaped pb-250">
         <div class="shape shape-style-1 shape-default">
         </div>
-        <div class="container py-lg-sm d-flex">
+        <div class="container py-lg-md d-flex">
           <div class="col px-0">
             <div class="row">
-              <div class="col-lg-6">
-                <h1 class="display-3  text-white">Redesigns</h1>
+              <div class="col-lg-8">
+                <div class="display-4 text-white">Hey there!</div>
+                <h1 class="display-1  text-white">I'm Jeff.</h1>
+                <div class="display-4 text-white">I make products that are enjoyable and easy to use.</div>
+                <p class="lead  text-white"></p>
+                <div class="btn-wrapper">
+                  <a href="/about-me.html" class="btn btn-white btn-icon mb-3 mb-sm-0" style="z-index: 5">
+                    <span class="btn-inner--text">Learn more about me</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -125,12 +141,12 @@
           <div class="col-lg-12">
             <div class="row row-grid">
               <div class="col-lg-4">
-                <a href="./re_nike-running-app.html" class="card card-lift--hover shadow border-0">
+                <a href="./practice-test.html" class="card card-lift--hover shadow border-0">
                   <div>
-                    <img style="width:100%" src="./img/nike-running-app-thumb.png" alt="Church and State logo with building interior as background">
+                    <img style="width:100%" src="./img/practice-test-thumb.png" alt="Practice Test">
                     <div>
                       <button class="btn btn-outline-secondary btn-block">
-                        <span class="btn-inner--text">Nike Running App</span>
+                        <span class="btn-inner--text">Practice Test 3.0</span>
                         <span class="btn-inner--icon">
                           <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
                         </span>
@@ -140,12 +156,12 @@
                 </a>
               </div>
               <div class="col-lg-4">
-                <a href="./re_local-dmv-listing-page.html" class="card card-lift--hover shadow border-0">
+                <a href="../case/church-state.html" class="card card-lift--hover shadow border-0">
                   <div>
-                    <img style="width:100%" src="./img/local-dmv-listing-page-thumb.png" alt="Church and State logo with building interior as background">
+                    <img style="width:100%" src="../case/img/churchandstate-cover.png" alt="Church and State logo with building interior as background">
                     <div>
                       <button class="btn btn-outline-secondary btn-block">
-                        <span class="btn-inner--text">Local DMV Listing Page</span>
+                        <span class="btn-inner--text">Church & State</span>
                         <span class="btn-inner--icon">
                           <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
                         </span>
@@ -155,12 +171,12 @@
                 </a>
               </div>
               <div class="col-lg-4">
-                <a href="./re_photo-roster.html" class="card card-lift--hover shadow border-0">
+                <a href="../case/pandaone.html" class="card card-lift--hover shadow border-0">
                   <div>
-                    <img style="width:100%" src="./img/photo-roster-thumb.png" alt="Church and State logo with building interior as background">
+                    <img style="width:100%" src="../case/img/pandaone-cover.png" alt="PandaOne">
                     <div>
                       <button class="btn btn-outline-secondary btn-block">
-                        <span class="btn-inner--text">Photo Roster</span>
+                        <span class="btn-inner--text">PandaOne</span>
                         <span class="btn-inner--icon">
                           <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
                         </span>
@@ -170,6 +186,53 @@
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="row row-grid my-3">
+          <div class="col-lg-4">
+            <a href="../case/kick-app-2.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/kick-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Kick App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="../case/support-dashboard.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/support-dashboard-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Support Dashboard</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="../case/indoor-soccer-subbing-app.html" class="card card-lift--hover shadow border-0">
+              <div>
+                <img style="width:100%" src="../case/img/indoor-soccer-subbing-app-cover.png" alt="thumbnail image">
+                <div>
+                  <button class="btn btn-outline-secondary btn-block">
+                    <span class="btn-inner--text">Indoor Soccer Subbing App</span>
+                    <span class="btn-inner--icon">
+                      <i class="fa fa-arrow-right" style="margin-left: 8px;"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -196,6 +259,10 @@
   <script src="../assets/vendor/headroom/headroom.min.js"></script>
   <!-- Argon JS -->
   <script src="../assets/js/argon.js?v=1.0.1"></script>
+  <script>
+    setaccessCookie();
+    addMenuitem();
+  </script>
 </body>
 
 </html>
