--- a/case/calendar-app.html
+++ b/case/calendar-app.html
@@ -80,6 +80,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <span class="nav-link-inner--text">Redesigns</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a href="./about-me.html/" class="nav-link" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
+              </a>
+            </li>
           </ul>
           <ul class="navbar-nav align-items-lg-center ml-lg-auto">
             <li class="nav-item">
