--- a/case/kick-app-2.html
+++ b/case/kick-app-2.html
@@ -17,13 +17,33 @@
   <link type="text/css" href="../assets/css/argon.css?v=1.0.1" rel="stylesheet">
   <!-- Docs CSS -->
   <link type="text/css" href="../assets/css/docs.min.css" rel="stylesheet">
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
-<!-- End Google Tag Manager -->
+  <!-- Google Tag Manager -->
+  <script>
+    (function(w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-N2ZHDPF');
+  </script>
+  <!-- End Google Tag Manager -->
+  <style>
+    .section-shaped .shape-style-1.shape-primary {
+      background: linear-gradient(150deg, #009BE7 15%, #1CAFEE 70%, #38C3F4 94%);
+    }
+
+    .headroom--not-top {
+      background: linear-gradient(150deg, #009BE7 15%, #1CAFEE 70%, #38C3F4 94%) !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -78,6 +98,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-me.html/" class="nav-link" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
               </a>
             </li>
           </ul>
@@ -144,7 +170,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Going out, seeing for myself, and listening to others provides empathy and context around people and their experiences.">
                       <span class="btn-inner--text display-3">Understand</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
@@ -152,33 +179,38 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <h4>Interviews</h4>
                   <p>I conducted interviews with competitive level players and coaches. I also spoke with players parent to try and uncover hidden challenges that they are facing as they try and help their kids get to the next level.</p>
                   <h4>Online Surveys</h4>
-                  <p>Taking the insight I received from my interviews I developed a survey with very precise questions to send out to all of my soccer club contacts. The goal of this survey was to create a baseline for where different clubs are as far as keeping players stats.</p>
+                  <p>Taking the insight I received from my interviews I developed a survey with very precise questions to send out to all of my soccer club contacts. The goal of this survey was to create a baseline for where different clubs are as
+                    far as keeping players stats.</p>
                 </div>
               </div>
               <div class="row border-top ">
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="The right measurable outcome is based on understanding the needs, perceptions, and experiences of those we are attempting to serve.">
                       <span class="btn-inner--text display-3">Define</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
                   </div>
                   <h4>Problem Statement</h4>
-                  <p>Ameture athletes currently don't have the in-game information they need to take their game to the next level. The majority of teams are only tracking goals scored and sometimes assists.  Currently, players are talking with college and pro recruiters without stats to back up their claims and get them to attend their games.</p>
+                  <p>Ameture athletes currently don't have the in-game information they need to take their game to the next level. The majority of teams are only tracking goals scored and sometimes assists. Currently, players are talking with college
+                    and pro recruiters without stats to back up their claims and get them to attend their games.</p>
                 </div>
               </div>
               <div class="row border-top ">
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Multiple directions are explored, building on one another, to get to unique and desirable solutions.">
                       <span class="btn-inner--text display-3">Explore</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
                   </div>
                   <h4>Wireframes</h4>
-                  <p>One way I like to explore possible solutions is through wireframes. The process of wireframing helped to uncover different methods for representing and displaying information as well as prioritizing that content in order of importance to the user, their expectations, and their goals.</p>
+                  <p>One way I like to explore possible solutions is through wireframes. The process of wireframing helped to uncover different methods for representing and displaying information as well as prioritizing that content in order of
+                    importance to the user, their expectations, and their goals.</p>
                   <div class="container container-lg">
                     <div class="row my-3">
                       <div class="col-md-6 mb-5 mb-md-0">
@@ -265,7 +297,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-12">
                   <!-- <h2 class="display-3">Understand</h2> -->
                   <div class="row justify-content-center">
-                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
+                    <button type="button" class="btn btn-outline-secondary" data-container="body" data-toggle="popover" data-placement="top"
+                      data-content="Testing an idea with minimal resources will lead to a better understanding of the problem and the impact your solutions might have more quickly.">
                       <span class="btn-inner--text display-3">Create</span>
                       <span class="btn-inner--icon"><i class="fa fa-question-circle-o"></i></span>
                     </button>
