--- a/challenge/index.html
+++ b/challenge/index.html
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </a>
             </li> -->
             <li class="nav-item">
-              <a href="../ui-challenges.html" class="nav-link active" role="button">
+              <a href="../challenge/" class="nav-link active" role="button">
                 <i class="fa fa-desktop d-lg-none"></i>
                 <span class="nav-link-inner--text">UI Challenges</span>
               </a>
@@ -78,6 +78,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../redesign/" class="nav-link" role="button">
                 <i class="fa fa-repeat d-lg-none"></i>
                 <span class="nav-link-inner--text">Redesigns</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="../about-me.html/" class="nav-link" role="button">
+                <i class="fa fa-repeat d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
               </a>
             </li>
           </ul>
