--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <span class="nav-link-inner--text">Redesigns</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a href="./about-me.html/" class="nav-link" role="button">
+                <i class="ni ni-circle-08 d-lg-none"></i>
+                <span class="nav-link-inner--text">About Me</span>
+              </a>
+            </li>
           </ul>
           <ul class="navbar-nav align-items-lg-center ml-lg-auto">
             <li class="nav-item">
@@ -118,9 +124,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="col px-0">
             <div class="row">
               <div class="col-lg-8">
-                <h1 class="display-2  text-white">I make things that are
-                  <span>enjoyable and easy to use.</span>
-                </h1>
+                <div class="display-4 text-white">Hey there!</div>
+                <h1 class="display-1  text-white">I'm Jeff.</h1>
+                <div class="display-4 text-white">I make products that are enjoyable and easy to use.</div>
                 <p class="lead  text-white"></p>
                 <div class="btn-wrapper">
                   <a href="/about-me.html" class="btn btn-white btn-icon mb-3 mb-sm-0" style="z-index: 5">
