--- a/redesign/re_nike-running-app.html
+++ b/redesign/re_nike-running-app.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Jeff Sanders">
-  <title>Jeff Sanders Jr. - Church & State</title>
+  <title>Jeff Sanders Jr. - Nike Running App Redesign</title>
   <!-- Favicon -->
   <link href="../assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
