About me page updates - process - certifications - contact me

--- a/about-me.html
+++ b/about-me.html
@@ -17,22 +17,33 @@
   <link type="text/css" href="../assets/css/argon.css?v=1.0.1" rel="stylesheet">
   <!-- Docs CSS -->
   <link type="text/css" href="../assets/css/docs.min.css" rel="stylesheet">
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N2ZHDPF');</script>
-<!-- End Google Tag Manager -->
-<style>
-  .section-shaped .shape-style-1.shape-primary {
-    background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%);
-  }
+  <!-- Google Tag Manager -->
+  <script>
+    (function(w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-N2ZHDPF');
+  </script>
+  <!-- End Google Tag Manager -->
+  <style>
+    .section-shaped .shape-style-1.shape-primary {
+      background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%);
+    }
 
-  .headroom--not-top {
-    background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%) !important;
-  }
-</style>
+    .headroom--not-top {
+      background: linear-gradient(150deg, #263238 15%, #37474F 70%, #455A64 94%) !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -175,13 +186,108 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </h3>
               <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>San Diego, California</div>
               <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Lead UX Designer - DMV.ORG</div>
-              <div><i class="ni education_hat mr-2"></i>UX Certified - NN/g</div>
             </div>
             <div class="mt-5 py-5 border-top text-center">
               <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <p>Born and raised in the shadows of the silicon slopes. I’m fueled by my love for making and creating human-centered products and services. I’m first and always an advocate for the user, the people my product serves. Through observation and conversation, I gather people’s stories to inspire my work. Always being mindful of the big picture and stressing about each pixel. I simplify the complex, make the mundane beautiful, and the tedious delightful. By balancing the needs of the user, business requirements, and the capabilities of technology I create innovative solutions, products, and experiences.</p>
+                <div class="col-lg-12 text-left">
+                  <h4>UX Certified</h4>
+                  <ul>
+                    <li><a href="https://www.nngroup.com/ux-certification/verify/" target="_blank">Nielsen Norman Group</a></li>
+                    <li><a href="https://www.linkedin.com/school/devpoint-labs/" target="_blank">DevPoint Labs</a></li>
+                  </ul>
+                  <h4>About Me</h4>
+                  <p>Born and raised in the shadows of the silicon slopes. I’m fueled by my love for making and creating human-centered products and services. I’m first and always an advocate for the user, the people my product serves. Through
+                    observation and conversation, I gather people’s stories to inspire my work. Always being mindful of the big picture and stressing about each pixel. I simplify the complex, make the mundane beautiful, and the tedious delightful. By
+                    balancing the needs of the user, business requirements, and the capabilities of technology I create innovative solutions, products, and experiences.</p>
                   <!-- <a href="#">Show more</a> -->
+                  <p>Throughout my career thus far, I have had the opportunity to work on a lot of exciting projects and have developed the following skills, which include, but are not limited to:</p>
+                  <ul>
+                    <li>Omnichannel Journeys and Customer Experience, Lean UX and Agile (<a href="https://www.nngroup.com/ux-certification/verify/" target="_blank"> Nielsen Norman Group certified </a>)</li>
+                    <li>Conversion rate optimization</li>
+                    <li>Wireframes & rapid prototyping</li>
+                    <li>A/B testing ( <a href="https://www.optimizely.com/academy/certifications/" target="_blank">Optimizely Certified</a> )</li>
+                    <li>Usability testing</li>
+                    <li>Information architecture</li>
+                    <li>Journey mapping</li>
+                    <li>Persona development</li>
+                  </ul>
+                  <h4>My Process</h4>
+                  <p>I like to follow a version of the double diamond design process. Even though it is described here and in my case studies in a linear fashion, it often involves returning to a previous step to iterate, expound, or try something
+                    completely different.</p>
+                  <div class="col-lg-12 mt-5 mt-lg-0 my-3">
+                    <!-- Menu -->
+                    <div class="nav-wrapper">
+                      <ul class="nav nav-pills nav-fill flex-column flex-md-row" id="tabs-text" role="tablist">
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0 active show" id="tabs-text-1-tab" data-toggle="tab" href="#tabs-text-1" role="tab" aria-controls="tabs-text-1" aria-selected="true">Learn</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-2-tab" data-toggle="tab" href="#tabs-text-2" role="tab" aria-controls="tabs-text-2" aria-selected="false">Synthesize</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-3-tab" data-toggle="tab" href="#tabs-text-3" role="tab" aria-controls="tabs-text-3" aria-selected="false">Ideate</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-4-tab" data-toggle="tab" href="#tabs-text-4" role="tab" aria-controls="tabs-text-4" aria-selected="false">Prototype</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-5-tab" data-toggle="tab" href="#tabs-text-5" role="tab" aria-controls="tabs-text-5" aria-selected="false">Test</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-6-tab" data-toggle="tab" href="#tabs-text-6" role="tab" aria-controls="tabs-text-6" aria-selected="false">Iterate</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="card shadow">
+                      <div class="card-body">
+                        <div class="tab-content" id="myTabContent">
+                          <div class="tab-pane fade active show" id="tabs-text-1" role="tabpanel" aria-labelledby="tabs-text-1-tab">
+                            <h4 class="d-lg-none">Learn</h4>
+                            <p class="description">Learning is first and foremost about gaining empathy for the user. But, learning is also much more than that. Each project brings new challenges and new domains. Whether the domain is health,
+                              education, or business planning, there is always a need to learn.</p>
+                            <p class="description">Some of my favorite learning tools include conducting interviews with users and Subject matter experts, heuristic evaluations, usability testing, card sorting, and competitive analysis.</p>
+                          </div>
+                          <div class="tab-pane fade" id="tabs-text-2" role="tabpanel" aria-labelledby="tabs-text-2-tab">
+                            <h4 class="d-lg-none">Synthesize</h4>
+                            <p class="description">It’s time to take everything that I learned and use it to identify trends, create and/or identify user’s mental models, user personas, user scenarios, user flows, problem statements, and design
+                              principles. Post-it notes, markers, and whiteboards are my best friends here.</p>
+                          </div>
+                          <div class="tab-pane fade" id="tabs-text-3" role="tabpanel" aria-labelledby="tabs-text-3-tab">
+                            <h4 class="d-lg-none">Ideate</h4>
+                            <p class="description">Ideation is perhaps my favorite part of the process because I (initially) get to let my imagination run wild with creating user scenarios, sketching wireframes, laying out interfaces in Sketch and
+                              using any other method I might need to help me in finding solutions to the problems uncovered in the previous phases.</p>
+                            <p class="description">If I'm in the early stages of ideation I like to use printed device templates for sketching wireframes. In the latter stages of ideating Sketch is my go-to tool. If I'm imagining new ways that a user
+                              might interact with a product I like to write out scenarios on paper and then visualize them in Bitstrips.</p>
+                          </div>
+                          <div class="tab-pane fade" id="tabs-text-4" role="tabpanel" aria-labelledby="tabs-text-4-tab">
+                            <h4 class="d-lg-none">Prototype</h4>
+                            <p class="description">With a lot of ideas generated it is time to take the best ideas and turn them into something that can be tested with users. I find it best to learn earlier rather than later what ideas are working
+                              and worth pursuing so my prototypes are usually low to mid-fidelity. Though I enjoy getting to make higher-fidelity prototypes that involve gestures and animations whenever I can.</p>
+                            <p class="description">Prototyping is, by its nature, all about testing. Whether it is a paper prototype or a prototype made with Invision App, the purpose is to check my thinking with someone else to make sure the
+                              solution I’m designing aligns with the mental model of our users.</p>
+                            <p class="description">I've tried a lot of different prototyping tools. Invision is great for quick prototypes to test the flow of an app or website. If I'm wanting to quickly prototype to test the flow and interaction I
+                              prefer good old HTML, CSS, and Javascript backed by a frontend framework for rapid prototyping. </p>
+                          </div>
+                          <div class="tab-pane fade" id="tabs-text-5" role="tabpanel" aria-labelledby="tabs-text-5-tab">
+                            <h4 class="d-lg-none">Test</h4>
+                            <p class="description">Testing is something that should be done throughout the process (instead of only at the end) in both formal and informal ways, the goal always being to receive feedback on the work being done and to
+                              gain an understanding of the thought process others go through when using the product.</p>
+                            <p class="description">Ideally, testing is conducted in-person as it is easier to gain a clear picture of how the user involved in testing is interacting with the design. When remote-testing is necessary (and even when
+                              in-person testing is being conducted) I like to use Lookback to record my tests.</p>
+                          </div>
+                          <div class="tab-pane fade" id="tabs-text-6" role="tabpanel" aria-labelledby="tabs-text-6-tab">
+                            <h4 class="d-lg-none">Iterate</h4>
+                            <p class="description">It is pretty rare that you get everything right the first time around. Having learned from testing a prototype with users I can now refine my solution to better solve the problems that I am trying to
+                              solve.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <h4>Contact Me</h4>
+                  <p class="description">Whether you have an app or website that needs a little help or you’re looking for a designer to join your team, I’m currently looking for opportunities to stretch my UX, UI, and Product design skills and would
+                    love to speak with you about your needs. Please contact me using LinkedIn</p>
+                  <a class="btn btn-sm btn-info mr-4" href="https://www.linkedin.com/in/jeffsandersjr" target="_blank" data-toggle="tooltip" title="" data-original-title="Connect on LinkedIn">Contact me on LinkedIn</a>
                 </div>
               </div>
             </div>
