--- a/case/pandaone.html
+++ b/case/pandaone.html
@@ -44,6 +44,17 @@
       background: linear-gradient(150deg, #00DA4C 15%, #00E36D 70%, #00ED8E 94%) !important;
     }
   </style>
+  <!-- Hotjar Tracking Code for design.jeffsandersjr@gmail.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1341048,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body>
