--- a/about-me.html
+++ b/about-me.html
@@ -185,7 +185,7 @@
                 <span class="font-weight-light"></span>
               </h3>
               <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>San Diego, California</div>
-              <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Lead UX Designer - DMV.ORG</div>
+              <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Lead UX Designer - Online Guru, Inc.</div>
             </div>
             <div class="mt-5 py-5 border-top text-center">
               <div class="row justify-content-center">
